2008-03-14 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast.c: fixed bug 1255403

2008-03-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: enhanced paragraph about bankswitching for mcs51
	* src/cdbFile.c (cdbWriteBasicSymbol): fixed bug 1909409 for locals

2008-03-14 Borut Razem <borut.razem AT siol.net>

	* as/doc/asmlnk.doc, as/doc/asxhtm.html: updated link-xx and aslink
	  command line options
	* as/link/hc08/lkmain.c: converted tabs to spaces so that the usage
	  is correctly displayed
	* as/link/z80/lkmain.c: usage line commented out

2008-03-13 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: corrected to be able to convert to PDF,
	  updated the list pf supported pic14 devices

2008-03-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: added paragraph about bankswitching for mcs51

2008-03-12 Borut Razem <borut.razem AT siol.net>

	* as/doc/asmlnk.doc, as/doc/asxhtm.html: updated command line options,
	  fixed documentation request #1718191
	* as/hc80/asmain.c, as/mcs51/asmain.c: added option -c to usage
	* doc/sdccman.lyx: added description of --no-std-crt0 gbz80
	  command line option

2008-03-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (isConformingBody): fixed bug 1505811, thanks Robert Larice
	* support/regression/tests/bug1505811.c: new, added

2008-03-09 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f2620.h,
	* device/include/pic16/pic18f4620.h,
	* device/lib/pic16/libdev/pic18f2620.c,
	* device/lib/pic16/libdev/pic18f4525.c,
	* device/lib/pic16/libdev/pic18f4620.c: merged 18f2525/2620/4525/4620
	  family to consistently use pic18f4620.[ch], fixes #1832562

2008-03-09 Borut Razem <borut.razem AT siol.net>

	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 2.8.0
	* knownbugs.html: regenerated
	* support/scripts/gen_known_bugs.pl: added number of open bugs

2008-03-09 Raphael Neider <rneider AT web.de>
